2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/progs.m4: add a define if LPR is found
	* server-src/amcheck.c: check it

2010-03-09  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: fixed caching of hostnames and dles

2010-03-09 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: rc02

2010-03-09  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-applications.7.xml: add brief example of
	  setting properties for an application

2010-03-09  Paul C. Mantz
	* perl/Amanda/Report.pm: L_PARTPARTIAL handles the same as L_PART

2010-03-08 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules: add chmod lines for etc/amanda
	*  packaging/rpm/amanda.spec: move ${SYSCONFDIR}/amanda to 750
	   section, specify directories in 750 section to also be 750.

2010-03-08  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: record DLEs in seen order in the cache
	* installcheck/Amanda_Report.pm: installcheck fixes

2010-03-08 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec, packaging/deb/changelog: change version
	   number to %%VERSION%%
	*  packaging/rpm/buildpkg, packaging/deb/buildpkg: pull correct
	   version from configure.in, substitute version in appropriate files
	*  packaging/README: correct list of packages, add note on debian
	   package creation.

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/ClientService.pm: process error from fork
	  correctly

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Dumpcache.pm: don't automatically generate
	  cached dumps - it causes more problems than it solves

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report/postscript.pm perl/Amanda/Report/human.pm: use %f
	  instead of %lf

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amfetchdump.pl: fix usage message
	* man/xml-source/amanda.conf.5.xml common-src/conffile.c: remove
	   default for mailto, as it is ignored