@@ -1,4 +1,9 @@
 2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Report.pm: count DLEs on the first tape
+	* perl/Amanda/Report/postscript.pm: display total part count
+	* installcheck/amreport.pl: changed output
+
+2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
 	* config/amanda/progs.m4: add a define if LPR is found
 	* server-src/amcheck.c: check it
 
